fix: fix broken styles

--- a/src/assets/styles/card.scss
+++ b/src/assets/styles/card.scss
@@ -181,5 +181,5 @@
   margin-left: auto;
   border-style: dashed;
   cursor: pointer;
-  margin-top: .5rem;
+  // margin-top: .5rem;
 }
